<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_packet</name>
  <version>0.0.0</version>
  <description>arm_package</description>
  <maintainer email="nuc@todo.todo">nuc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
<depend>std_msgs</depend>
<depend>dynamixel_sdk</depend>
<depend>dynamixel_workbench</depend>
<depend>dynamixel_workbench_toolbox</depend>

<depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
